# pyco

./: .gitignore  LICENSE  README.md
pyagent/: README.md  agent.py  cli.py  config.py  ollama_client.py  pyproject.toml  requirements.txt  tui.py
pyagent/plugins/: __init__.py  base.py  file_ops.py  shell.py  web_search.py
