[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyagent"
version = "0.1.0"
description = "Coding agent leggero con sistema plugin e supporto Ollama"
requires-python = ">=3.10"
dependencies = ["requests>=2.25"]

[project.scripts]
pyagent = "cli:main"
